--- a/index.html
+++ b/index.html
@@ -89,9 +89,15 @@
               <div class="container">
                 <h2 class="head-img">Чем мы занимаемся</h2>
                 <ul class="list-img list">
+                    <div class="list-block">
                     <li class="img"><img class="img-size" src="./images/img-1.jpg" alt="планируем"  width="370" height="294"></li>
+                    <p class="list-info">Десктопные приложения</p></div>
+                    <div class="list-block">
                     <li class="img"><img class="img-size" src="./images/img-2.jpg" alt="проверяем"  width="370" height="294"></li>
+                    <p class="list-info">Мобильные приложения</p></div>
+                    <div class="list-block">
                     <li class="img"><img class="img-size" src="./images/img-3.jpg" alt="ползуемся"  width="370" height="294"></li>
+                    <p class="list-info">Дизайнерские решения</p></div>
                 </ul>
               </div>
             </section>
