--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="preconnect">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>goit-markup-hw-05</title>
+    <title>goit-markup-hw-04</title>
 </head>
 <body>
       <header class="header">
@@ -89,15 +89,18 @@
               <div class="container">
                 <h2 class="head-img">Чем мы занимаемся</h2>
                 <ul class="list-img list">
-                    <div class="list-block">
+                  <div class="img-info">
                     <li class="img"><img class="img-size" src="./images/img-1.jpg" alt="планируем"  width="370" height="294"></li>
-                    <p class="list-info">Десктопные приложения</p></div>
-                    <div class="list-block">
+                    <p class="img-text">Десктопные приложения</p>
+                  </div>
+                  <div class="img-info">
                     <li class="img"><img class="img-size" src="./images/img-2.jpg" alt="проверяем"  width="370" height="294"></li>
-                    <p class="list-info">Мобильные приложения</p></div>
-                    <div class="list-block">
+                    <p class="img-text">Мобильные приложения</p>
+                  </div>
+                  <div class="img-info">
                     <li class="img"><img class="img-size" src="./images/img-3.jpg" alt="ползуемся"  width="370" height="294"></li>
-                    <p class="list-info">Дизайнерские решения</p></div>
+                    <p class="img-text">Дизайнерские решения</p>
+                  </div>
                 </ul>
               </div>
             </section>
