--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="preconnect">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <title>goit-markup-hw-05</title>
+  <title>goit-markup-hw-04</title>
 </head>
 <body>
   <header class="header">
@@ -46,7 +46,9 @@
               </ul>
                 <ul class="section-list list">
                     <li class="section-pictures">
+                      <div class="section-top-text">
                       <a href="" class="block"><img class="section-link" src="./images/portfolio/img-1.jpg" alt="Технокряк" width="370";>
+                        <p class="section-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Технокряк</h2>
                         <p class="section-text">Веб-сайт</p></div>
