--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="preconnect">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <title>goit-markup-hw-04</title>
+  <title>goit-markup-hw-05</title>
 </head>
 <body>
   <header class="header">
@@ -48,63 +48,79 @@
                     <li class="section-pictures">
                       <div class="section-top-text">
                       <a href="" class="block"><img class="section-link" src="./images/portfolio/img-1.jpg" alt="Технокряк" width="370";>
-                        <p class="section-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                        <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Технокряк</h2>
                         <p class="section-text">Веб-сайт</p></div>
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <div class="section-top-text">
                       <a href="" class="block"><img class="section-link" src="./images/portfolio/img-2.jpg" alt="Постер" width="370";>
+                        <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Постер New Orlean vs Golden Star</h2>
                         <p class="section-text">Дизайн</p></div>
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <div class="section-top-text">
                       <a href="" class="block"><img class="section-link" src="./images/portfolio/img-3.jpg" alt="Ресторан" width="370";>
+                        <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Ресторан Seafood</h2>
                         <p class="section-text">Приложение</p></div>
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <div class="section-top-text">
                       <a href="" class="block"><img class="section-link" src="./images/portfolio/img-4.jpg" alt="Проект" width="370";>
+                        <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Проект Prime</h2>
                         <p class="section-text">Маркетинг</p></div>
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <div class="section-top-text">
                       <a href="" class="block"><img class="section-link" src="./images/portfolio/img-5.jpg" alt="Boxes" width="370";>
+                        <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Проект Boxes</h2>
                         <p class="section-text">Приложение</p></div>
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <div class="section-top-text">
                       <a href="" class="block"><img class="section-link" src="./images/portfolio/img-6.jpg" alt="Inspiration has no Borders" width="370";>
+                        <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Inspiration has no Borders</h2>               
                         <p class="section-text">Веб-сайт</p></div>
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <div class="section-top-text">
                       <a href="" class="block"><img class="section-link" src="./images/portfolio/img-7.jpg" alt="Издание" width="370";>
+                        <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Издание Limited Edition</h2>
                         <p class="section-text">Дизайн</p></div>
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <div class="section-top-text">
                       <a href="" class="block"><img class="section-link" src="./images/portfolio/img-8.jpg" alt="LAB" width="370";>
+                        <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Проект LAB</h2>
                         <p class="section-text">Маркетинг</p></div>
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <div class="section-top-text">
                       <a href="" class="block"><img class="section-link" src="./images/portfolio/img-9.jpg" alt="Business" width="370";>
+                        <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Growing Business</h2>
                         <p class="section-text">Приложение</p></div>
