--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <a class="header-name" href="">Web<span class="header-logo">Studio</span></a>
           <ul class="header-list list">
             <li class="header-info"><a class="header-item text" href="./index.html">Студия</a></li>
-            <li class="header-info"><a class="header-item text current" href="./portfolio.html">Портфолио</a></li>
+            <li class="header-info li"><a class="header-item text current" href="./portfolio.html">Портфолио</a></li>
             <li class="header-info"><a class="header-item text" href="">Контакты</a></li>
     </ul>
       </nav>
@@ -46,26 +46,29 @@
               </ul>
                 <ul class="section-list list">
                     <li class="section-pictures">
-                      <div class="section-top-text">
-                      <a href="" class="block"><img class="section-link" src="./images/portfolio/img-1.jpg" alt="Технокряк" width="370";>
-                        <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
-                     <div class="section-info">
-                        <h2 class="section-header text">Технокряк</h2>
-                        <p class="section-text">Веб-сайт</p></div>
+                      <a href="" class="block">
+                        <div class="section-top-text">
+                        <img class="section-link" src="./images/portfolio/img-1.jpg" alt="Технокряк" width="370";>
+                          <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                      <div class="section-info">
+                          <h2 class="section-header text">Технокряк</h2>
+                          <p class="section-text">Веб-сайт</p></div>
                       </a>
                     </li>
                     <li class="section-pictures">
-                      <div class="section-top-text">
-                      <a href="" class="block"><img class="section-link" src="./images/portfolio/img-2.jpg" alt="Постер" width="370";>
-                        <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
-                     <div class="section-info">
-                        <h2 class="section-header text">Постер New Orlean vs Golden Star</h2>
-                        <p class="section-text">Дизайн</p></div>
+                      <a href="" class="block">
+                        <div class="section-top-text">
+                        <img class="section-link" src="./images/portfolio/img-2.jpg" alt="Постер" width="370";>
+                          <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                      <div class="section-info">
+                          <h2 class="section-header text">Постер New Orlean vs Golden Star</h2>
+                          <p class="section-text">Дизайн</p></div>
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <a href="" class="block">
                       <div class="section-top-text">
-                      <a href="" class="block"><img class="section-link" src="./images/portfolio/img-3.jpg" alt="Ресторан" width="370";>
+                      <img class="section-link" src="./images/portfolio/img-3.jpg" alt="Ресторан" width="370";>
                         <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Ресторан Seafood</h2>
@@ -73,8 +76,9 @@
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <a href="" class="block">
                       <div class="section-top-text">
-                      <a href="" class="block"><img class="section-link" src="./images/portfolio/img-4.jpg" alt="Проект" width="370";>
+                      <img class="section-link" src="./images/portfolio/img-4.jpg" alt="Проект" width="370";>
                         <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Проект Prime</h2>
@@ -82,8 +86,9 @@
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <a href="" class="block">
                       <div class="section-top-text">
-                      <a href="" class="block"><img class="section-link" src="./images/portfolio/img-5.jpg" alt="Boxes" width="370";>
+                      <img class="section-link" src="./images/portfolio/img-5.jpg" alt="Boxes" width="370";>
                         <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Проект Boxes</h2>
@@ -91,8 +96,9 @@
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <a href="" class="block">
                       <div class="section-top-text">
-                      <a href="" class="block"><img class="section-link" src="./images/portfolio/img-6.jpg" alt="Inspiration has no Borders" width="370";>
+                      <img class="section-link" src="./images/portfolio/img-6.jpg" alt="Inspiration has no Borders" width="370";>
                         <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Inspiration has no Borders</h2>               
@@ -100,8 +106,9 @@
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <a href="" class="block">
                       <div class="section-top-text">
-                      <a href="" class="block"><img class="section-link" src="./images/portfolio/img-7.jpg" alt="Издание" width="370";>
+                      <img class="section-link" src="./images/portfolio/img-7.jpg" alt="Издание" width="370";>
                         <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Издание Limited Edition</h2>
@@ -109,8 +116,9 @@
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <a href="" class="block">
                       <div class="section-top-text">
-                      <a href="" class="block"><img class="section-link" src="./images/portfolio/img-8.jpg" alt="LAB" width="370";>
+                      <img class="section-link" src="./images/portfolio/img-8.jpg" alt="LAB" width="370";>
                         <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Проект LAB</h2>
@@ -118,8 +126,9 @@
                       </a>
                     </li>
                     <li class="section-pictures">
+                      <a href="" class="block">
                       <div class="section-top-text">
-                      <a href="" class="block"><img class="section-link" src="./images/portfolio/img-9.jpg" alt="Business" width="370";>
+                      <img class="section-link" src="./images/portfolio/img-9.jpg" alt="Business" width="370";>
                         <p class="section-info-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                      <div class="section-info">
                         <h2 class="section-header text">Growing Business</h2>
