--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <button class="button-close" data-modal-close>
-                <a href="" class="button-link">
+                <a href="" class="push-link">
                   <svg class="work-svg-icon" width="11" height="11">
                     <use href="./images/symbol-defs.svg#icon-Vector"></use>
                   </svg>
