--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
           </section>
         <section class="backdrop-section">
+          <h2 class="modal-section">Модалка</h2>
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <button class="button-close" data-modal-close>
