--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
           <h2 class="modal-section">Модалка</h2>
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
+              <a href="" class="button-link"></a>
               <button class="button-close" data-modal-close>
-                <a href="" class="push-link">
                   <svg class="work-svg-icon" width="11" height="11">
                     <use href="./images/symbol-defs.svg#icon-Vector"></use>
                   </svg>
-                </a>
               </button>
+            </a>
             </div>
           </div>
         </section>
