--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <h2 class="modal-section">Модалка</h2>
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-              <a href="" class="button-link"></a>
+              <a href="" class="button-link">
                 <button class="button-close" data-modal-close>
                     <svg class="work-svg-icon" width="11" height="11">
                       <use href="./images/symbol-defs.svg#icon-Vector"></use>
