--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <a class="header-name" href="">Web<span class="header-logo">Studio</span></a>
           <ul class="header-list list">
             <li class="header-info"><a class="header-item text" href="./index.html">Студия</a></li>
-            <li class="header-info li"><a class="header-item text current" href="./portfolio.html">Портфолио</a></li>
+            <li class="header-info li"><a class="header-item linea text current" href="./portfolio.html">Портфолио</a></li>
             <li class="header-info"><a class="header-item text" href="">Контакты</a></li>
     </ul>
       </nav>
