--- a/index.html
+++ b/index.html
@@ -44,13 +44,11 @@
           <h2 class="modal-section">Модалка</h2>
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-              <a href="" class="button-link">
                 <button class="button-close" data-modal-close>
                     <svg class="work-svg-icon" width="11" height="11">
                       <use href="./images/symbol-defs.svg#icon-Vector"></use>
                     </svg>
                 </button>
-              </a>
             </div>
           </div>
         </section>
@@ -106,19 +104,24 @@
                   <li class="img">
                     <div class="img-info">
                       <img class="img-size" src="./images/img-1.jpg" alt="планируем"  width="370" height="294">
-                    <p class="img-text">Десктопные приложения</p>
+                  <div class="img-box">
+                      <p class="img-text">Десктопные приложения</p></div> 
                   </div>
                 </li>
                    <li class="img">
                     <div class="img-info">
                       <img class="img-size" src="./images/img-2.jpg" alt="проверяем"  width="370" height="294">
+                      <div class="img-box">
                       <p class="img-text">Мобильные приложения</p>
                     </div>
+                  </div>  
                   </li>
                   <li class="img">
                     <div class="img-info">
                       <img class="img-size" src="./images/img-3.jpg" alt="ползуемся"  width="370" height="294">
-                    <p class="img-text">Дизайнерские решения</p>
+                      <div class="img-box">
+                        <p class="img-text">Дизайнерские решения</p>
+                      </div>
                   </div>
                 </li>
                 </ul>
